# json-editor

./: .gitignore  README.md  README.zh.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  build.yml
src/: App.css  App.js  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
