[package]
name = "json-editor"
version = "1.0.0"
description = "JSON 格式化编辑器"
authors = ["you"]
edition = "2021"

[lib]
name = "json_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "~2.10", features = [] }
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
